# PV-Curve-Tracer

./: .gitignore  .mxproject  .project  ComIds.h  Errors.h  Fifo.cpp  PV Curve Tracer.ioc  README.md  VoltageAdcSensor.hpp  VoltageAdcSensor_h.txt  main.cpp  main.hpp  main_h.txt  mbed_app.json  power-generation-common.lib
Core/Inc/: stm32l4xx_hal_conf.h
Core/Src/: stm32l4xx_hal_msp.c
PV-Curve-Tracer-Board/: .cproject  README.md
PV-Curve-Tracer-Board/Core/Src/: main.c
Visualizer/: Cargo.toml  README.md
Visualizer/Arduino/prog1/: prog1.ino
Visualizer/src/: communication.rs  main.rs  parser.rs  port.rs  visualizer.rs
Visualizer/src/curve_tracer/: Cargo.toml
Visualizer/src/curve_tracer/src/: main.rs  parser.rs  visualizer.rs
deprecated/: CurrentAdcSensor_.txt  main_c.txt
