[package]
name = "curve_tracer"
version = "0.1.0"
authors = ["Matthew Yu <matthewjkyu@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
plotters = "^0.2.15"
terminal-menu = "^1.9.7"
serialport = "3.2"
# sudo apt-get install libudev-dev