[package]
name = "curve_tracer"
version = "0.1.0"
authors = ["Matthew Yu <matthewjkyu@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4"
# ctrlc = "3.1.6"
pbr = "1.0.3"
plotters = "^0.2.15"
serialport = "3.3.0"
terminal-menu = "^1.9.7"
# sudo apt-get install libudev-dev